tenzir/integration/data/reference/functions/test_slice/step_02.ref
error: `start` must be at least 0, but got -1
 --> <input>:5:17
  |
5 |     x = x.slice(-1)
  |                 ^^ 
  |